--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,42 @@
+@font-face {
+  font-family: "Gang of Three";
+  src: local("./go3v2.tff");
+}
+
 body {
-    background-image: url('background.jpg');
-    /*background-size: cover;
+    /* background-image: url('background.jpg'); */
+    background-size: cover;
     /* background-repeat: no-repeat; */
     background-position: center center;
   }
 
-  #score {
+  canvas {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    display: block;
+    margin: auto;
+    height: 100%;
+}
+
+  #scoreDisplay {
+    position: absolute;
     font-size: 2em;
     z-index: 100;
-    display: none;
     width: 100%;
-    margin: 0;
-    font-family: "Bangers", cursive;
+    font-family: "Gang of Three", Arial, Helvetica, sans-serif;
+  }
+
+  #score, #highScore {
+    font-family: "Gang of Three", Arial, Helvetica, sans-serif;
+    text-align: 'center';
+  }
+
+  #gameOver {
+    top: 50%;
+    left: 50%;
+    right: 50%;
+    font-size: 2em;
+    font-family: "Gang of Three", Arial, Helvetica, sans-serif; 
+    text-align: center;
+    z-index: 99999999;
+    vertical-align: middle;
   }
