--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ canvas {
   display: block;
   margin: auto;
   height: 100%;
-  width: 100%;
 }
 
 #scoreDisplay {
@@ -23,6 +22,7 @@ canvas {
   font-size: 2em;
   z-index: 100;
   width: 100%;
+  margin: auto;
   font-family: "Gang of Three", Arial, Helvetica, sans-serif;
 }
 
