--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,9 @@ canvas {
   z-index: 100;
   margin: auto;
   padding-top: 10px;
-  font-family: "Gang of Three", Arial, Helvetica, sans-serif;
 }
 
+h1,
 #score,
 #highScore {
   font-family: "Gang of Three", Arial, Helvetica, sans-serif;
@@ -35,6 +35,11 @@ canvas {
   pointer-events: auto; 
 }
 
+#hwk6-project-description {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: small;
+  z-index: 100;
+}
 
 .button {
   text-align: center;
