--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,7 @@ h1,
   background-color: #00CCC0;
   border: 1px #000000 solid;
 }
+
+#retry{
+  font-family: "Gang of Three", Arial, Helvetica, sans-serif;
+}
