--- a/styles.css
+++ b/styles.css
@@ -30,16 +30,23 @@ h1,
   font-family: "Gang of Three", Arial, Helvetica, sans-serif;
 }
 
-#gameOverMsg, #retry, #pause {
+#gameOver {
   position: absolute;
-  font-size: 2em;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+#gameOverMsg {
+  margin-bottom: 20px;
+}
+
+#retry, #pause, #gameOverMsg {
+  font-size: 3em;
   font-family: "Gang of Three", Arial, Helvetica, sans-serif;
 }
 
-#gameOver, #settings {
-  text-align: center;
-  vertical-align: middle;
-}
 
 #logo { 
   width: 100%;
